@@ -1,3 +1,8 @@
+2023-07-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (inhibit-remote-files): New defun.
+	(without-remote-files): New defmacro.
+
 2023-07-11  Jim Porter  <jporterbugs@gmail.com>
 
 	* tramp.el (tramp-handle-file-remote-p): Handle CONNECTED value of
